force-app/main/default/objects/Contact/fields/Lease_Rent_Term_Preference__c.field-meta.xml
<CustomField>
    <fullName>Lease_Rent_Term_Preference__c</fullName>
    <label>Lease / Rent Term Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month-to-Month</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>9 Months</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>18 Months</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3+ Years</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>