force-app/main/default/objects/Contact/fields/Owned_Properties__c.field-meta.xml
<CustomField>
    <fullName>Owned_Properties__c</fullName>
    <label>Owned Properties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>