force-app/main/default/objects/Contact/fields/Preferred_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Property_Type__c</fullName>
    <label>Preferred Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single-family Home</fullName>
            </value>
            <value>
                <fullName>Multi-family Home</fullName>
            </value>
            <value>
                <fullName>Condominium</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Duplex/Triplex/Fourplex</fullName>
            </value>
            <value>
                <fullName>Commercial Office</fullName>
            </value>
            <value>
                <fullName>Retail Space</fullName>
            </value>
            <value>
                <fullName>Industrial Warehouse</fullName>
            </value>
            <value>
                <fullName>Mixed-Use Property</fullName>
            </value>
            <value>
                <fullName>Vacant Land</fullName>
            </value>
            <value>
                <fullName>Luxury Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>