force-app/main/default/objects/Contact/fields/Total_Assessed_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Assessed_Value__c</fullName>
    <label>Total Assessed Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>