force-app/main/default/objects/Contact/fields/Total_Equity__c.field-meta.xml
<CustomField>
    <fullName>Total_Equity__c</fullName>
    <label>Total Equity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>