force-app/main/default/objects/Contact/recordTypes/Property_Buyer_Investor.recordType-meta.xml
<RecordType>
    <fullName>Property_Buyer_Investor</fullName>
    <active>true</active>
    <description>Property Buyer/Investor - To buy or Investing in the Property.</description>
    <label>Property Buyer / Investor</label>
</RecordType>