force-app/main/default/objects/Contact/recordTypes/Property_Seller.recordType-meta.xml
<RecordType>
    <fullName>Property_Seller</fullName>
    <active>true</active>
    <description>Property Seller/Owner - To Sell the property.</description>
    <label>Property Seller</label>
</RecordType>