force-app/main/default/objects/Contact/recordTypes/Property_Tenant.recordType-meta.xml
<RecordType>
    <fullName>Property_Tenant</fullName>
    <active>true</active>
    <description>Who pays Rent or Lease for the place , land or buildings that they use.</description>
    <label>Property Tenant</label>
</RecordType>